5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1836_1276.log
== TEST (2019-06-25 11:32:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[1]):
	for j in range(size(tot)):
		tot[i] += vet[i,j]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:33:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[1]):
	for j in range(size(tot)):
		tot[j] += vet[i,j]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:33:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for j in range(shape(vet)[1]):
	for i in range(size(tot)):
		tot[i] += vet[i,j]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:33:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for j in range(shape(vet)[1]):
	for i in range(size(tot)):
		tot[i] += vet[j,i]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:34:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[1]):
	for j in range(size(tot)):
		tot[i] += vet[j,i]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:35:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[1]):
	for j in range(size(tot)):
		tot[j] += vet[j,i]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:35:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[1]):
	for j in range(size(tot)):
		tot[j] += vet[i,j]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[0]):
	for j in range(size(tot)):
		tot[j] += vet[i,j]
print(tot)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:38:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[0]):
	for j in range(size(tot)):
		tot[j] += vet[i,j]
for i in tot:
	if i == max(tot)
	print(i+1)
-- ERROR:
File "XXXX", line 9
    if i == max(tot)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[0]):
	for j in range(size(tot)):
		tot[j] += vet[i,j]
for i in tot:
	if i == max(tot):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[0]):
	for j in range(size(tot)):
		tot[j] += vet[i,j]
for i in range(size(tot)):
	if tot[i] == max(tot):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:39:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input()))
tot = zeros(shape(vet)[1],dtype = int)
for i in range(shape(vet)[0]):
	for j in range(size(tot)):
		tot[j] += vet[i,j]
for i in range(size(tot)):
	if tot[i] == max(tot):
		print(i+1)
-- EXECUTION TIME:
1.25135
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
